--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <!-- COLLECTIONS HEADER -->
     <div class="header-container">
       <h2 class="header-lg">Collections</h2>
-      <button type="button" id="asc" class="sort-button" data-name="collections">A - Z</button>
-      <button type="button" id="desc" class="sort-button" data-name="collections">Z - A</button>
+      <button type="button" id="asc" class="sort-button" data-name="collections">
+        <span class="sub-header">A - Z</span>
+      </button>
+      <button type="button" id="desc" class="sort-button" data-name="collections">
+        <span class="sub-header">Z - A</span>
+      </button>
     </div>
 
     <!-- COLLECTIONS -->
