--- a/index.html
+++ b/index.html
@@ -17,10 +17,20 @@
     <!-- COLLECTIONS HEADER -->
     <div class="header-container">
       <h2 class="header-lg">Collections</h2>
-      <button type="button" id="asc" class="sort-button" data-name="collections">
+      <button
+        type="button"
+        id="asc"
+        class="sort-button"
+        data-name="collections"
+      >
         <span class="sub-header">A - Z</span>
       </button>
-      <button type="button" id="desc" class="sort-button" data-name="collections">
+      <button
+        type="button"
+        id="desc"
+        class="sort-button"
+        data-name="collections"
+      >
         <span class="sub-header">Z - A</span>
       </button>
     </div>
@@ -33,8 +43,12 @@
     <!-- FAVORITES HEADER -->
     <div class="header-container">
       <h2 class="header-lg">Favorites</h2>
-      <button type="button" id="asc" class="sort-button" data-name="favorites">A - Z</button>
-      <button type="button" id="desc" class="sort-button" data-name="favorites">Z - A</button>
+      <button type="button" id="asc" class="sort-button" data-name="favorites">
+        A - Z
+      </button>
+      <button type="button" id="desc" class="sort-button" data-name="favorites">
+        Z - A
+      </button>
     </div>
 
     <!-- FAVORITES -->
@@ -43,6 +57,9 @@
     </div>
 
     <script src="./js/index.js" type="text/javascript"></script>
-    <script src="https://kit.fontawesome.com/02a956eb8f.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/02a956eb8f.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
